--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "shepton-ownership-app",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  },
   "scripts": {
     "start": "node server.js",
     "debug": "node server.js && console.log('Debugging')"
